reference to kaggle kernel

--- a/bqml-population-of-zip-code-per-intersection.ipynb
+++ b/bqml-population-of-zip-code-per-intersection.ipynb
@@ -4,6 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "This is a copy of my public kaggle kernel: https://www.kaggle.com/joatom/bqml-population-of-zip-code-per-intersection",
+    "\n",
     "# About\n",
     "\n",
     "This kernel shows how to integrate population and zip code information to the intersections.\n",
