reference to public kaggle kernel

--- a/bqml-incl-intersection-clusters.ipynb
+++ b/bqml-incl-intersection-clusters.ipynb
@@ -4,6 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "This is a copy of my public kaggle kernel: https://www.kaggle.com/joatom/bqml-incl-intersection-clusters",
+    "\n",
     "# Intro\n",
     "\n",
     "The kernel relies as much as possible on BigQuery (BQ). All features are generated in BQ. And the prediction model is also build in BQ.\n",
