--- a/bigquery-geotab-bqml.ipynb
+++ b/bigquery-geotab-bqml.ipynb
@@ -4,12 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This is a copy of my public kaggle kernel: https://www.kaggle.com/joatom/bigquery-geotab-bqml.",
+    "This is a copy of my public kaggle kernel: https://www.kaggle.com/joatom/bigquery-geotab-bqml.\n",
     "\n",
     "This solution led to the **1st Place** in the category *BigQuery ML Models built in SQL*.",
     "\n",
     "# Introduction\n",
-    "This kernel includes all features and models that lead to my final submission to the [BigQuery-GeoTab Competition](https://www.kaggle.com/c/bigquery-geotab-intersection-congestion).\n",
+    "This kernel includes all features and models that led to my final submission to the [BigQuery-GeoTab Competition](https://www.kaggle.com/c/bigquery-geotab-intersection-congestion).\n",
     "\n",
     "My personal objective of the competition is to tryout BigQuery (BQ) including the basic ML features. Therefore the kernel relies as much as possible on BQ. All features are generated in BQ with varying SQL-techniques. The prediction model is also build in BQ. \n",
     "\n",
