--- a/bigquery-geotab-bqml.ipynb
+++ b/bigquery-geotab-bqml.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "This is a copy of my public kaggle kernel: https://www.kaggle.com/joatom/bigquery-geotab-bqml.\n",
     "\n",
-    "This solution led to the **1st Place** in the category *BigQuery ML Models built in SQL*.",
+    "This solution led to the **1st Place** in the category **BigQuery ML Models built in SQL**.",
     "\n",
     "# Introduction\n",
     "This kernel includes all features and models that led to my final submission to the [BigQuery-GeoTab Competition](https://www.kaggle.com/c/bigquery-geotab-intersection-congestion).\n",
